crates/cli/tests/snapshots/tui_project_list_test__project_list_second_selected.snap
---
source: crates/cli/tests/tui_project_list_test.rs
expression: output
---
Select Project                                                                  
                                                                                
────────────────────────────────────────────────────────────────────────────────
┌──────────────────────────────────────────────────────────────────────────────┐
│  proj-a                                                                      │
│▶ proj-b                                                                      │
│  proj-c                                                                      │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
────────────────────────────────────────────────────────────────────────────────
q: quit | ↑↓: select | Enter: confirm | a: add
